avoid extra boldness of buttons on ios

--- a/assets/src/less/mixins/button.less
+++ b/assets/src/less/mixins/button.less
@@ -6,6 +6,7 @@
 	line-height: 1;
 	padding: @space-1 @space-2;
 	text-decoration: none;
+	font-weight: normal;
 	&.is-disabled,
 	&.disabled,
 	&:disabled {
